@@ -1,59 +1,0 @@
-%nin%                   Negative Match
-aggregate.formula       Data Frames and Tables of Descriptive
-                        Statistics
-annotation              Adding Annotations to Objects
-applyTemplate           Apply a Formatting Template to a Numeric or
-                        Character Vector
-as.array                Converting Data Frames into Arrays
-as.symbols              Construction of Lists of Symbols
-bucket                  Abstract Data Structures to Collect Simulation
-                        Results
-By                      Conditional Evaluation of an Expression
-cases                   Distinguish between Cases Specified by Logical
-                        Conditions
-codebook                Generate a Codebook of a Data Set
-coef.style              Formatting Styles for Coefficients and Factor
-                        Contrasts
-collect                 Collect Objects
-contr                   Convenience Methods for Setting Contrasts
-data.set                Data Set Objects
-Descriptives            Vectors of Univariate Sample Statistics
-dimrename               Change dimnames, rownames, or colnames
-foreach                 Loop over Variables in a Data Frame or
-                        Environment
-getSummary              Get Model Summaries for Use with "mtable"
-importer                Object Oriented Intervace to Foreign Files
-include                 Attach a Source File to the Search Path
-items                   Survey Items
-labels                  Value Labels
-measurement             Levels of Measurement of Survey Items
-memisc-package          Introduction to the 'memisc' Package
-mkHelpDir               Collect HTML Documentation
-mtable                  Comparative Table of Model Estimates
-named.list              Named Lists, Lists of Items, and Atomic Vectors
-panel.errbars           Panel Functions for Error Bars
-percent                 Table of Percentages with Percentage Base
-prediction.frame        Produce a Data Frame of Predictions and
-                        Independent Variables
-query                   Query an Object for Information
-recode                  Recode Items, Factors and Numeric Vectors
-relabel                 Change labels of factors or labelled objects
-rename                  Change Names of a Named Object
-reorder.array           Reorder an Array or Matrix
-retain                  Retain Objects in an Environment
-sample.data.frame       Take a Sample from a Data Frame-like Object
-Sapply                  A Dimension Preserving Variant of "sapply" and
-                        "lapply"
-Simulate                Support for Simulation Experiments
-sort.data.frame         Convenience Methods to Sort Data Frames and
-                        Data Sets
-Substitute              Substitutions in Language Objects
-Table                   One-Dimensional Table of Frequences and/or
-                        Percentages
-Termplot                Produce a Term Plot Lattice
-to.data.frame           Convert an Array into a Data Frame
-toLatex.default         Additional Methods for LaTeX Representations
-                        for R objects
-trimws                  Trim Leading and Trailing Whitespaces
-UnZip                   Extract Files from Zip Files
-value.filter            Value Filters
